fix: 로켓펀치 인턴 부분 수정 #3